<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">茶汇通2.0</string>

    <!-- 主页面 -->
    <string name="home_main">首页</string>
    <string name="home_brand">品牌</string>
    <string name="home_category">分类</string>
    <string name="home_cart">购物车</string>
    <string name="home_member">我的中心</string>

    <!-- 茶市 -->
    <string name="market">茶市</string>
    <string name="publish">发布</string>
    <string name="msg">消息</string>
    <string name="mine">我的</string>
    <!-- 茶市首页 -->
    <string name="all">全部</string>
    <string name="sell">出售</string>
    <string name="required">求购</string>
    <!-- 茶市首页 -->

    <!-- 发布 -->
    <string name="sale">卖</string>
    <string name="buy">买</string>
    <string name="brand">品牌</string>
    <string name="brand_hint">请输入品牌</string>
    <string name="item_name">品名</string>
    <string name="item_name_hint">请输入品名</string>
    <string name="years">年份</string>
    <string name="price">单价</string>
    <string name="price_hint">请输入价格</string>
    <string name="detail">是否详谈</string>
    <string name="quantity">数量</string>
    <string name="quantity_hint">请输入数量和单位</string>
    <string name="piece">件</string>
    <string name="yuan">元</string>
    <string name="address">所在城市</string>
    <string name="address_hint">城市</string>
    <string name="phone_num">联系电话</string>
    <string name="phone_num_hint">请输入联系电话</string>
    <string name="add_time">发布时间</string>
    <string name="phone">电话</string>
    <string name="product_sale_desction">请输入新产品简介</string>
    <string name="product_buy_desction">请输入求购商品相关信息及其他需求</string>
    <string name="product_detail">商品详情</string>
    <string name="delete">删除</string>
    <string name="submit">提交</string>
    <string name="input_message">输入留言</string>
    <string name="contact_saler">联系卖家</string>
    <string name="loading">正在加载</string>
    <!-- 发布 -->

    <!-- 登录/注册 -->
    <string name="register">注册</string>
    <string name="login_in">登录</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="forgot_password"><u>忘记密码?</u></string>
    <string name="email">邮箱</string>
    <string name="confirm_password">再次输入密码</string>
    <string name="register_now">立即注册</string>

    <string name="title_activity_personal">PersonalActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- 登录/注册 -->

    <!-- 2.0 -->
    <!-- 首页 -->
    <string name="home_market">茶 市</string>
    <string name="home_Forum">社 区</string>
    <string name="home_news">资 讯</string>
    <string name="shop">商 城</string>
    <string name="hill">山头</string>
    <string name="home_personal">个人中心</string>
    <string name="show_detail">查看详情</string>
    <string name="publish_sale_title">我要出售好茶</string>
    <string name="publish_sale_desc">我要发布一款好茶，寻求可遇不可求的茶客</string>
    <string name="publish_buy_title">我要收入好茶</string>
    <string name="publish_buy_desc">我要收入一款用心做的好茶，不可多得的稀世珍宝</string>
    <string name="publish_product">发布商品</string>

    <!-- 个人中心 -->
    <string name="personal_voucher">红包</string>
    <string name="personal_point">积分：</string>
    <string name="personal_balance">余额：</string>

    <string name="profile">个人资料</string>
    <string name="avatar">头像</string>
    <string name="real_name">真实姓名</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="born_date">出生日期</string>
    <string name="manage_address">我的收货地址</string>
    <string name="change_password">修改密码</string>
    <string name="security">账户安全</string>

    <string name="my_voucher">我的红包</string>

    <!-- 社区 -->
    <string name="more">更多</string>
    <string name="popular_leader">魅力领袖</string>
    <string name="today_topic">今日新声</string>
    <string name="timeline">茶趣分享</string>
    <string name="leaders">领袖榜单</string>
    <string name="topic_list">话题精选</string>
    <string name="everyday_topic">每日一话</string>
    <string name="comment">评论</string>
    <string name="write_comment">回复评论</string>
    <string name="message">消息列表</string>

    <!--茶客聚聚-->
    <string name="event">茶客聚聚</string>
    <string name="event_location">地点: </string>
    <string name="event_state">状态: </string>
    <string name="event_time">活动时间: </string>
    <string name="event_join_time">报名时间: </string>
    <string name="event_target">活动对象: </string>
    <string name="event_count">人数: </string>

    <string name="comment_nobody">还没有人评论</string>

    <!-- 其他 -->
    <string name="commit">提交</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>

    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="recorder_normal">长按说话</string>
    <string name="recorder_recording">手指上滑,取消发送</string>
    <string name="recorder_want_to_cancel">松开手指,取消发送</string>
    <string name="recorder_short_tips">录音时间太短</string>

    <!--页面标题，命名格式为：title_页面-->
    <string name="title_order">确认订单</string>
    <string name="title_order_detail">确认订单</string>
    <string name="title_cart">购物车</string>
    <string name="title_quotation">行情中心</string>
    <string name="title_my_order">我的订单</string>
    <string name="title_pay">支付订单</string>
    <!--按钮文字，命名格式为：btn_按钮事件-->
    <string name="btn_save_address">保存收货地址</string>
    <string name="btn_add_address">新增收货地址</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_pay">去付款</string>
    <string name="btn_cancel_order">取消订单</string>
    <string name="btn_sure_order">确认订单</string>
    <string name="btn_comment">评价</string>
    <string name="btn_view_delivery">查看物流</string>
    <!--标签文字，命名格式为：label_标签文字-->
    <string name="label_consignee">收件人：</string>
    <string name="label_address">收货地址：</string>
    <string name="label_goods_total">商品总额：</string>
    <string name="label_freight">运        费：</string>
    <string name="label_total">总        计：</string>
    <string name="label_total_pay">合计：</string>
    <string name="label_consignee_name">收件人姓名</string>
    <string name="label_mobile_number">手机号</string>
    <string name="label_area">省市区</string>
    <string name="label_detail_address">详细地址</string>
    <string name="label_tea_name">品名</string>
    <string name="label_year">年份</string>
    <string name="label_unit">单位</string>
    <string name="label_price">参考价</string>
    <string name="label_pay_total">支付金额：</string>
    <string name="label_order_num">订单编号：</string>
    <string name="label_pay_num">支付编号：</string>
    <string name="label_time_create">创建时间：</string>
    <!--文本文字，命名格式为：text_文本文字-->
    <string name="text_followed">已关注</string>
    <string name="text_freight">运费</string>
    <string name="text_carriage_free">免运费</string>
    <string name="text_alipay">支付宝</string>
    <string name="text_alipay_body">支付宝用户使用</string>
    <string name="text_wxpay">微信支付</string>
    <string name="text_wxpay_body">微信支付用户使用</string>
    <string name="text_upmp">银行卡支付</string>
    <string name="text_upmp_body">支持所有银联储蓄卡和信用卡支付</string>
    <string name="text_pay">去支付</string>
    <string name="text_address_list">地址列表</string>
    <string name="text_hotline_counseling">客服/热线咨询：</string>
    <string name="text_phone_number">05925990900</string>
    <!--选项卡文字，命名格式为：tab_选项卡文字-->
    <!--消息框文字，命名格式为：toast_消息-->
    <string name="toast_network_invalid">当前网络不可用,请检查您的网络!</string>
    <string name="toast_follow_success">关注成功</string>
    <string name="toast_not_registered">该号码未注册</string>
    <string name="toast_not_fill">请填写完整资料</string>
    <string name="toast_add_success">添加成功</string>
    <string name="toast_edit_success">编辑成功</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_name_invalid">名字长度过短</string>
    <string name="toast_mobile_invalid">手机格式错误</string>
    <string name="toast_area_invalid">请请选择省市区</string>
    <string name="toast_address_invalid">请输入详细地址</string>
    <string name="toast_cancel_success">取消成功</string>
    <string name="toast_sure_success">确认订单成功</string>
    <string name="toast_pay_success">支付成功</string>
    <string name="toast_pay_fail">支付失败</string>
    <string name="toast_pay_comfirming">订单正在确认中</string>
    <!--编辑框的提示文字，命名格式为：hint_提示信息-->
    <string name="hint_limit_name">最少2个字</string>
    <string name="hint_limit_mobile">11位手机号</string>
    <string name="hint_please_choose">请选择</string>
    <string name="hint_detail_address">请输入详细地址</string>
    <!--图片的描述文字，命名格式为：desc_图片文字-->
    <string name="desc_alipay">支付宝</string>
    <string name="desc_wxpay">微信支付</string>
    <string name="desc_upmp">银联支付</string>
    <!--对话框的文字，命名格式为：dialog_文字-->
    <string name="dialog_cancel_order">确定要取消订单？</string>
    <string name="dialog_sure_order">确定要确认订单吗？</string>
    <string name="dialog_loading_alipay">正在调用支付宝</string>
    <string name="dialog_loading_wxpay">正在调用微信支付</string>
    <!--menu的item文字，命名格式为：action_文字-->
</resources>