<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hodor="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.damenghai.chahuitong.view.TopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/primary"
        hodor:titleTextSize="@dimen/small_middle_text_size"
        hodor:titleTextColor="@android:color/white"
        />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        />
    
    <com.damenghai.chahuitong.view.NewWebView
        android:id="@+id/id_fragment_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        />

    <RadioGroup
        android:id="@+id/id_home_tab"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            style="@style/home_tab"
            android:id="@+id/home_tab_main"
            android:drawableTop="@drawable/home_tab_main_selector"
            android:text="@string/home_main"
            />

        <RadioButton
            style="@style/home_tab"
            android:id="@+id/home_tab_brand"
            android:drawableTop="@drawable/home_tab_brand_selector"
            android:text="@string/home_brand"
            />
        <RadioButton
            style="@style/home_tab"
            android:id="@+id/home_tab_category"
            android:drawableTop="@drawable/home_tab_category_selector"
            android:text="@string/home_category"
            />
        <RadioButton
            style="@style/home_tab"
            android:id="@+id/home_tab_cart"
            android:drawableTop="@drawable/home_tab_cart_selector"
            android:text="@string/home_cart"
            />
        <RadioButton
            style="@style/home_tab"
            android:id="@+id/home_tab_member"
            android:drawableTop="@drawable/home_tab_member_selector"
            android:text="@string/home_member"
            />
    </RadioGroup>

</LinearLayout>